lab1 fix typos